Fix CEO image cropping in quote-box-new
Change object-fit from cover to contain so full image is visible

--- a/css/about.css
+++ b/css/about.css
@@ -199,8 +199,8 @@
 .quote-box-new .ceo-image img {
     width: 100%;
     height: 100%;
-    object-fit: cover;
-    object-position: top center;
+    object-fit: contain;
+    object-position: center center;
 }
 
 .quote-box-new .quote-content {
